--- a/01/playbook/inventory/prod.yml
+++ b/01/playbook/inventory/prod.yml
@@ -3,7 +3,16 @@
     hosts:
       centos7:
         ansible_connection: docker
+      localhost:
+        ansible_connection: local
   deb:
     hosts:
       ubuntu:
+        ansible_connection: docker
+      localhost:
+        ansible_connection: local
+
+  fed:
+    hosts:
+      fedora:
         ansible_connection: docker
